# conciliador_bancario

./: .gitignore  README.md  app_streamlit.py  config.yaml  pyproject.toml  requirements.txt
conciliador_bancario.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
infra/: config.py  export.py  loader_bancos.py  logger.py
logic/: conciliacion.py  lectura.py  modelos.py
tests/: test_conciliacion.py  test_grupal.py  test_lectura.py  test_loader.py
